--- a/style.css
+++ b/style.css
@@ -115,7 +115,7 @@ header h2 {
 
 .news {
 	width: 300px;
-  height: 300px;
+  /*height: 300px;*/
 	margin: 5px 5px 20px 5px ;
 	border: none;
   /*padding: 10px;*/
@@ -127,7 +127,7 @@ header h2 {
   flex-direction: column;
   justify-content: space-between;
   margin-top: 20px;
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 
 .wrapper {
